--- a/BasicMTL_projects/BasicMtlAntlr/.classpath
+++ b/BasicMTL_projects/BasicMtlAntlr/.classpath
@@ -5,5 +5,6 @@
     <classpathentry kind="lib" path="ThirdParty/ANTLR/antlrfull.jar"/>
     <classpathentry kind="src" path="/Utils"/>
     <classpathentry kind="lib" path="/Utils/ThirdParty/log4j/log4j.jar"/>
+    <classpathentry kind="src" path="/BasicMtlAstJava"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
