--- a/BasicMTL_projects/BasicMtlAntlr/.project
+++ b/BasicMTL_projects/BasicMtlAntlr/.project
@@ -3,6 +3,7 @@
 	<name>BasicMtlAntlr</name>
 	<comment></comment>
 	<projects>
+		<project>BasicMtlAstJava</project>
 		<project>Utils</project>
 	</projects>
 	<buildSpec>
