--- a/BasicMTL_projects/BMTLBasicMtlASTView/build.xml
+++ b/BasicMTL_projects/BMTLBasicMtlASTView/build.xml
@@ -1,5 +1,5 @@
-<!-- $Id: build.xml,v 1.2 2003-10-17 14:29:14 jpthibau Exp $ -->
-<project name="BasicMtl_Transformation_libraires" default="compile Standard" basedir=".">
+<!-- $Id: build.xml,v 1.1 2003-10-17 14:33:52 jpthibau Exp $ -->
+<project name="BasicMtl_Transformation_libraires" default="compile BasicMtlASTView" basedir=".">
 	<description>
         Build file for the different BasicMTL files in this project
 	</description>
@@ -33,8 +33,8 @@
 	    <mkdir dir="${bin}"/>
 	</target>
 	
-	<target name="compile Standard" depends="init"
-  	 	description="Generate code for Standard.mtl">
+	<target name="compile BasicMtlASTView" depends="init"
+  	 	description="Generate code for BasicMtlASTView.mtl">
 	 	<java jar="../BasicMtl2Java/PureJava/dist/bin/Facade.jar" 
            fork="true"
            failonerror="true"
@@ -42,16 +42,18 @@
          <arg value="${src}\"/> 
          <arg value="-TLLPath"/> 
          <arg value="${build}/src/"/> 
+         <arg value="-TLLLoadingPaths"/> 
+         <arg value="C:\PROJET_MTL\ECLIPSE\workspace\BMTLStandard\build\src\TLL\;C:\PROJET_MTL\ECLIPSE\workspace\BMTLASTJava\build\src\TLL\"/> 
          <arg value="-PackageName"/> 
-         <arg value="Standard"/> 
+         <arg value="BasicMtlASTView"/> 
          <arg value="-BinPath"/> 
-         <arg value="${build}/src/java/Standard/"/> 
+         <arg value="${build}/src/java/BasicMtlASTView/"/> 
        </java>
  
 	</target>
 
 	
-	<target name="compile generated code" depends="compile Standard">
+	<target name="compile generated code" depends="compile BasicMtlASTView">
 		<description>
   			compile the generated Java Code
   		</description>		
@@ -60,17 +62,21 @@
     	    destdir="${bin}">
    			<classpath refid="MTLcompiler.class.path"/>
    		</javac>
-  		<javac srcdir="${build}/src/java/Standard" 
+  		<javac srcdir="${build}/src/java/BasicMtlASTView" 
     	    destdir="${bin}">
    			<classpath refid="MTLcompiler.class.path"/>
+	    	<classpath>
+			    <pathelement location="C:\PROJET_MTL\ECLIPSE\workspace\BasicMtlASTJava\dist\bin\BasicMtlASTJava.jar"/>
+			    <pathelement path="${classpath}"/>
+			</classpath>
    		</javac>		
 	</target>
 	
 	<target name="clean"
-        description="clean up Standard lib" >
+        description="clean up BasicMtlASTView lib" >
     	<!-- Delete the ${build}, {$bin} and ${dist} directory trees -->
-    	<delete dir="${build}/src/java/Standard"/>    
-    	<delete dir="${build}/src/UncheckedTLL/Standard.tll"/>
-    	<delete dir="${build}/src/TLL/Standard.tll"/>    
+    	<delete dir="${build}/src/java/BasicMtlASTView"/>    
+    	<delete dir="${build}/src/UncheckedTLL/BasicMtlASTView.tll"/>
+    	<delete dir="${build}/src/TLL/BasicMtlASTView.tll"/>    
   	</target>
 </project>
