--- a/BasicMTL_projects/BasicMtlAntlr2TLLJava/build.xml
+++ b/BasicMTL_projects/BasicMtlAntlr2TLLJava/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.3 2003-09-05 12:15:12 dvojtise Exp $ -->
+<!-- $Id: build.xml,v 1.4 2003-10-17 14:40:28 jpthibau Exp $ -->
 <project name="BasicMtlAntlr2TLLJava" default="dist" basedir=".">
 	<description>
         Known directories for the Antlr2TLL (Unchecked TLL producer)
@@ -80,7 +80,7 @@
 		description="create a distibution">
 		<mkdir dir="${dist}"/>
 		<!-- This project depends on the BasicMtlAntlr2BasicMtlAstJava and BasicMtlTLLJava project -->
-		<copy todir="${dist}/bin">
+ 		<copy todir="${dist}/bin">
 			<fileset dir="${BasicMtlAntlr2BasicMtlAstJava}\dist\bin"/>
 		</copy>
 		<copy todir="${dist}/bin">
