--- a/BasicMTL_projects/BasicMtlAntlr2ASTView/.project
+++ b/BasicMTL_projects/BasicMtlAntlr2ASTView/.project
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>BasicMtlAntlr2ASTViewAssociation</name>
+	<name>BasicMtlAntlr2ASTView</name>
 	<comment></comment>
 	<projects>
 		<project>BasicMTLRuntime</project>
 		<project>BasicMtlAntlr</project>
 		<project>BasicMtlAstJava</project>
+		<project>BasicMtl_Transformation_libraries</project>
 		<project>MTDataTypes</project>
-		<project>RepositoryAPI</project>
 		<project>Utils</project>
 	</projects>
 	<buildSpec>
