default is to compile purejava
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@257 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/BasicMtl2Java/build.xml
+++ b/BasicMTL_projects/BasicMtl2Java/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.4 2003-10-31 12:19:22 jpthibau Exp $ -->
+<!-- $Id: build.xml,v 1.5 2003-10-31 13:28:12 dvojtise Exp $ -->
 <project name="BasicMtl_Transformation_libraires" default="LibAssociation dist" basedir=".">
 	<description>
         Build for the different BasicMTL compilers following the bootstrap process
@@ -7,8 +7,8 @@
 	<target name="PureJava dist">    	
     	<ant antfile="PureJava_build.xml" target="dist"/>
   	</target>
-	<target name="LibInheritance dist">
-	<!--<target name="LibInheritance dist" depends="PureJava dist">    	-->
+	<!--<target name="LibInheritance dist">-->
+	<target name="LibInheritance dist" depends="PureJava dist">>
     	<ant antfile="LibInheritance_build.xml" target="dist"/>
   	</target>
 	<target name="LibAssociation_boot dist" depends="LibInheritance dist">    	
