relative paths instead of "c:\PROJET_MTL\..."
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@294 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/Facade/.classpath
+++ b/BasicMTL_projects/Facade/.classpath
@@ -3,8 +3,8 @@
     <classpathentry kind="src" path="src"/>
     <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
     <classpathentry kind="src" path="/Utils"/>
-    <classpathentry kind="lib" path="C:/PROJET_MTL/ECLIPSE/workspace/Utils/ThirdParty/log4j/log4j.jar"/>
     <classpathentry kind="src" path="/BasicMtlTLLJava"/>
+    <classpathentry kind="lib" path="/Utils/ThirdParty/log4j/log4j.jar"/>
     <classpathentry kind="src" path="/BasicMtlAntlr2TLLJava"/>
     <classpathentry kind="src" path="/BasicMtlAntlr"/>
     <classpathentry kind="src" path="/TLLTypeChecker"/>
