--- a/BasicMTL_projects/FacadeAssociation/.classpath
+++ b/BasicMTL_projects/FacadeAssociation/.classpath
@@ -3,7 +3,7 @@
     <classpathentry kind="src" path="src"/>
     <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
     <classpathentry kind="src" path="/Utils"/>
-    <classpathentry kind="lib" path="C:/PROJET_MTL/ECLIPSE/workspace/Utils/ThirdParty/log4j/log4j.jar"/>
+    <classpathentry kind="lib" path="/Utils/ThirdParty/log4j/log4j.jar"/>
     <classpathentry kind="src" path="/BasicMtlTLLJava"/>
     <classpathentry kind="src" path="/BasicMtlAntlr2TLLJava"/>
     <classpathentry kind="src" path="/BasicMtlAntlr"/>
