--- a/BasicMTL_projects/BMTLASTJava/build.xml
+++ b/BasicMTL_projects/BMTLASTJava/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.1 2003-10-17 14:35:56 jpthibau Exp $ -->
+<!-- $Id: build.xml,v 1.2 2003-11-14 17:29:38 jpthibau Exp $ -->
 <project name="BasicMtl_Transformation_libraires" default="compile ASTJava" basedir=".">
 	<description>
         Build file for the different BasicMTL files in this project
@@ -13,13 +13,13 @@
 	<path id="MTLcompiler.class.path">
     	<pathelement path="${java.class.path}/"/>
     	<pathelement path="."/>
-    	<pathelement path="C:\PROJET_MTL\ECLIPSE\workspace\MTDataTypes\dist\bin\MTDataTypes.jar"/>
-    	<pathelement path="C:\PROJET_MTL\ECLIPSE\workspace\BasicMTLRuntime\dist\bin\BasicMTLRuntime.jar"/>
-    	<pathelement path="C:\PROJET_MTL\ECLIPSE\workspace\RepositoryAPI\dist\bin\RepositoryAPI.jar"/>
-    	<pathelement path="C:\PROJET_MTL\ECLIPSE\workspace\MDRDriver\dist\bin\MDRDriver.jar"/>
-    	<pathelement path="C:\PROJET_MTL\ECLIPSE\workspace\Utils\dist\bin\Utils.jar"/>
-    	<pathelement path="C:\PROJET_MTL\ECLIPSE\workspace\Utils\ThirdParty\log4j\log4j.jar"/>
-    	<pathelement path="C:\PROJET_MTL\ECLIPSE\workspace\BasicMtl_Transformation_libraries\bin"/>
+    	<pathelement path="../MTDataTypes/dist/bin/MTDataTypes.jar"/>
+    	<pathelement path="../BasicMTLRuntime/dist/bin/BasicMTLRuntime.jar"/>
+    	<pathelement path="../RepositoryAPI/dist/bin/RepositoryAPI.jar"/>
+    	<pathelement path="../MDRDriver/dist/bin/MDRDriver.jar"/>
+    	<pathelement path="../Utils/dist/bin/Utils.jar"/>
+    	<pathelement path="../Utils/ThirdParty/log4j/log4j.jar"/>
+    	<pathelement path="../BasicMtl_Transformation_libraries/bin"/>
   	</path>
   	
 	<target name="init">
@@ -39,7 +39,7 @@
            fork="true"
            failonerror="true"
            >
-         <arg value="${src}\"/> 
+         <arg value="${src}/"/> 
          <arg value="-TLLPath"/> 
          <arg value="${build}/src/"/> 
          <arg value="-PackageName"/> 
