--- a/UML1.4_projects/UML1.4/build.xml
+++ b/UML1.4_projects/UML1.4/build.xml
@@ -1,5 +1,5 @@
-<!-- $Id: build.xml,v 1.5 2003-11-27 16:51:08 dvojtise Exp $ -->
-<project name="UML14" default="run UML14_Transformations" basedir=".">
+<!-- $Id: build.xml,v 1.6 2003-12-01 17:00:42 dvojtise Exp $ -->
+<project name="UML14" default="run all UML14_Transformations" basedir=".">
 	<description>
         Sample Build file for using the BasicMTL compiler
 	</description>
@@ -7,14 +7,16 @@
 	
 	
 	
-	<target name="run UML14_Transformations" > 
+	<target name="run all UML14_Transformations" depends="run UML14_Transformation, run TP_IM, run PL derivation"> 
   		<description>
-  		</description>  
+  		</description>   		
+  	</target>  	
+	<target name="run UML14_Transformation" > 
+  		<description>
+  		</description>
   		<ant antfile="UML_Utils_build.xml" dir="." target="compile"/>
   		<ant antfile="UML14_Transformations_build.xml" dir="." target="compile"/>
   		<ant antfile="UML14_Transformations_build.xml" dir="." target="run"/>
-  		<ant antfile="PLDerivation_build.xml" dir="." target="compile"/>
-  		<ant antfile="PLDerivation_build.xml" dir="." target="run"/>  		
   	</target>
   	<target name="run TP_IM" > 
   		<description>
@@ -23,6 +25,15 @@
   		<ant antfile="TP_IM_build.xml" dir="." target="compile"/>
   		<ant antfile="TP_IM_build.xml" dir="." target="run"/>
   	</target>	
+  	<target name="run PL derivation" > 
+  		<description>
+  		</description>  
+  		<ant antfile="PLDerivation_build.xml" dir="." target="compile"/>
+  		<ant antfile="PLDerivation_build.xml" dir="." target="run"/>  		
+  	</target> 
+  	<target name="clean">
+  		<delete dir="build"></delete>   		
+  	</target>
   	
 
 </project>
