fix bug 161 : exceptions were not correctly handled and regressions detection was not efficient
git-svn-id: svn+ssh://scm.gforge.inria.fr/svnroot/mtl/trunk@330 da3e8b17-bafa-471d-a888-b3674b21d29d

--- a/BasicMTL_projects/CompilerTests/src/AssociationTry/build.xml
+++ b/BasicMTL_projects/CompilerTests/src/AssociationTry/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.1 2003-11-04 15:30:27 jpthibau Exp $ -->
+<!-- $Id: build.xml,v 1.2 2003-12-05 14:07:38 dvojtise Exp $ -->
 <project name="AssociationTry" default="compile" basedir=".">
 	<description>
         Build file for the AssociaionTry sample
@@ -81,8 +81,8 @@
    		</javac>
   	</target>
 
-  	<target name="run sample" description="run the sample program">
-		<java classname="${Sample Package}.BMTLLib_${Sample Package}" fork="true">
+  	<target name="run AssociationTry" description="run the AssociationTry program">
+		<java classname="${Sample Package}.BMTLLib_${Sample Package}" fork="true" failonerror="yes">
 		<arg value="-h"/>
 		<classpath>
 			<pathelement path="${builtbin}/"/>
