--- a/BasicMTL_projects/BasicMtl2Java/.classpath
+++ b/BasicMTL_projects/BasicMtl2Java/.classpath
@@ -6,5 +6,7 @@
     <classpathentry kind="src" path="/Utils"/>
     <classpathentry kind="src" path="/MDRDriver"/>
     <classpathentry kind="lib" path="/Utils/ThirdParty/log4j/log4j.jar"/>
+    <classpathentry kind="lib"
+        path="LibAssociation/dist/bin/BasicMTLruntime.jar" sourcepath="BasicMtl2Java/LibAssociation/src"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
