--- a/UML1.4_projects/UML1.4/Uml1.4Models/build.xml
+++ b/UML1.4_projects/UML1.4/Uml1.4Models/build.xml
@@ -1,5 +1,5 @@
-<!-- $Id: build.xml,v 1.3 2003-11-26 14:37:59 dvojtise Exp $ -->
-<!-- §Usefull script to pack and unpack zargo files from poseidon or ArgoUML -->
+<!-- $Id: build.xml,v 1.4 2003-12-18 15:38:42 dvojtise Exp $ -->
+<!-- Usefull script to pack and unpack zargo files from poseidon or ArgoUML -->
 <project name="poseidon import export" default="extract" basedir=".">
 	<description>
         target for import export of poseidon files
