--- a/BasicMTL_projects/CompilerTests/src/build.xml
+++ b/BasicMTL_projects/CompilerTests/src/build.xml
@@ -1,4 +1,4 @@
-<!-- $Id: build.xml,v 1.3 2003-12-09 16:47:01 dvojtise Exp $ -->
+<!-- $Id: build.xml,v 1.4 2004-01-21 13:43:45 edrezen Exp $ -->
 <project name="Build,run all tests" default="run all" basedir=".">
 	<description>
         Build and run all tests of the CompilerTests project
@@ -20,6 +20,9 @@
 	    <ant antfile="${basedir}/HelloWorld/build.xml" dir="${basedir}/HelloWorld" target="compile" inheritAll="false"/>	
 	    <echo>Building "AssociationTry" test.</echo>
 	    <ant antfile="${basedir}/AssociationTry/build.xml" dir="${basedir}/AssociationTry" target="compile" inheritAll="false"/>
+	    <echo>Building "MultipleInheritence" test.</echo>
+	    <ant antfile="${basedir}/MultipleInheritence/build.xml" dir="${basedir}/MultipleInheritence" target="compile" inheritAll="false"/>
+	    
 	</target>
   
 	<target name="clean"
@@ -35,7 +38,9 @@
 	    <ant antfile="${basedir}/Vehicules/TestVehicules/build.xml" dir="${basedir}/Vehicules/TestVehicules" target="run TestVehicules" inheritAll="false"/>
 	    <echo>Running "HelloWorld" test.</echo>
 	    <ant antfile="${basedir}/HelloWorld/build.xml" dir="${basedir}/HelloWorld" target="run HelloWorld" inheritAll="false"/>
-  	<echo>Running "AssociationTry" test.</echo>
+	  	<echo>Running "AssociationTry" test.</echo>
 	    <ant antfile="${basedir}/AssociationTry/build.xml" dir="${basedir}/AssociationTry" target="run AssociationTry" inheritAll="false"/>
+	  	<echo>Running "MultipleInheritence" test.</echo>
+	    <ant antfile="${basedir}/MultipleInheritence/build.xml" dir="${basedir}/MultipleInheritence" target="run MultipleInheritence" inheritAll="false"/>
   	</target>
 </project>
